projects/wp-mysql-stack/manifests/03-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: wp-db
  namespace: wp-mysql-stack
spec:
  selector:
    app: wp-db
  ports:
    - port: 3306
  clusterIP: None
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: wp-db
  namespace: wp-mysql-stack
spec:
  serviceName: wp-db
  replicas: 1
  selector:
    matchLabels:
      app: wp-db
  template:
    metadata:
      labels:
        app: wp-db
    spec:
      containers:
        - name: mysql
          image: docker.io/library/mysql:5.7
          imagePullPolicy: Never
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: data
              mountPath: /var/lib/mysql
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: wp-db-pvc
