projects/wp-mysql-stack/manifests/04-wordpress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wp-web
  namespace: wp-mysql-stack
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wp-web
  template:
    metadata:
      labels:
        app: wp-web
    spec:
      containers:
        - name: wordpress
          image: wordpress:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: wp-web
  namespace: wp-mysql-stack
spec:
  type: NodePort
  selector:
    app: wp-web
  ports:
    - port: 80
      targetPort: 80
